...
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/primary_blue_color"
                android:src="@drawable/ic_baseline_map_36"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/setting"
                />

            <ImageButton
                android:id="@+id/setting"
                android:layout_width="36dp"
                android:layout_height="36dp"
...
